crates/weaveffi-cli/tests/snapshots/python_kitchen_sink__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# kitchen_sink (Python)

Python bindings for the `kitchen_sink` native library, built on `ctypes`.

## Requirements

- Python 3.9 or later
- The native library (`libkitchen_sink.so`, `libkitchen_sink.dylib`, or `kitchen_sink.dll`)

## Install

```bash
pip install .
```

## Loading the native library

The bindings load the library from `KITCHEN_SINK_LIBRARY` when it is set (a full path),
then from inside the installed package, then from the system loader's search
path.

## Usage

```python
import kitchen_sink
```

<!-- END README.md -->
