crates/weaveffi-cli/tests/snapshots/python_kitchen_sink__kitchen_sink_kitchen_sink_pyi.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

import builtins
from abc import ABC, abstractmethod
from enum import IntEnum
from typing import Dict, Iterator, List, Optional, Type

class Error(Exception):
    GENERIC_ERROR_CODE: int
    PANIC_ERROR_CODE: int
    MARSHAL_ERROR_CODE: int
    FOREIGN_ERROR_CODE: int
    CANCELLED_ERROR_CODE: int
    code: int
    message: str
    def __init__(self, code: int, message: str) -> None: ...

# A reusable token referenced across modules
class Token:
    id: int
    label: str
    def __init__(self, id: int, label: str) -> None: ...

# Trivial cross-module helper
def ping() -> str: ...

class KitchenErrorsError(Error):
    NotFound: Type["NotFound"]
    InvalidInput: Type["InvalidInput"]
    def __init__(self, code: int, message: str) -> None: ...

class NotFound(KitchenErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

class InvalidInput(KitchenErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

# Task priority levels
class Priority(IntEnum):
    # Low priority
    Low = 0
    # Normal priority
    Normal = 1
    # High priority
    High = 2

# Kitchen sink struct exercising every field feature
class Item:
    # Stable identifier
    id: int
    # Display name
    name: str
    # Initial count
    count: int
    # Whether the item is enabled
    enabled: bool
    # Scaling ratio
    ratio: float
    nick: int
    payload: bytes
    tags: List[str]
    attrs: Dict[str, str]
    parent: Optional[int]
    # Cross-module struct reference
    token: "Token"
    priority: "Priority"
    # An optional object inside a record
    gadget: Optional["Gadget"]
    def __init__(self, id: int, name: str, count: int, enabled: bool, ratio: float, nick: int, payload: bytes, tags: List[str], attrs: Dict[str, str], parent: Optional[int], token: "Token", priority: "Priority", gadget: Optional["Gadget"]) -> None: ...

# Consumer-implemented observer of ready items
class ReadyListener(ABC):
    # Fires when an item is ready
    @abstractmethod
    def on_ready(self, code: int, msg: str) -> None: ...
    # Receives the item itself and says whether to keep listening
    @abstractmethod
    def on_item(self, item: "Item", gadget: "Gadget") -> bool: ...

# A pocket-sized interface exercising the object surface
class Gadget:
    def __init__(self, id: int) -> None: ...
    def close(self) -> None: ...
    def __enter__(self) -> "Gadget": ...
    def __exit__(self, *exc: object) -> None: ...
    def describe(self) -> str: ...
    def poke(self, times: int) -> int: ...
    @staticmethod
    def version() -> str: ...

# Identity for bool
def bool_id(x: bool) -> bool: ...

def i32_id(x: int) -> int: ...

def u32_id(x: int) -> int: ...

def i64_id(x: int) -> int: ...

def f64_id(x: float) -> float: ...

def echo_string(s: str) -> str: ...

def echo_bytes(b: bytes) -> bytes: ...

# Register a listener, returning how many are attached
def subscribe(listener: "ReadyListener") -> int: ...

# Optional object in both directions
def maybe_gadget(fallback: Optional["Gadget"]) -> Optional["Gadget"]: ...

# A list of objects
def gadgets() -> List["Gadget"]: ...

# An iterator over objects
def stream_gadgets() -> Iterator["Gadget"]: ...

# Optional struct return
def maybe_item(id: int) -> Optional["Item"]: ...

# List of structs
def list_items() -> List["Item"]: ...

# Map return type
def get_attrs() -> Dict[str, int]: ...

# Iterator return type
def stream_items() -> Iterator["Item"]: ...

# Returns the shared Token type from another module
def cross_module_token() -> "Token": ...

# Async operation
async def do_async(input: str) -> str: ...

# Cancellable async operation
async def do_cancellable(input: str) -> str: ...

# Legacy operation kept for compatibility
def legacy_op() -> int: ...

# Replacement for legacy_op
def new_op() -> int: ...

# Trivial nested-module function
def hello() -> str: ...

# END kitchen_sink.pyi
