crates/weaveffi-cli/tests/snapshots/python_kitchen_sink__kitchen_sink_py_typed.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION]
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate
