crates/weaveffi-cli/tests/snapshots/python_kitchen_sink__pyproject_toml.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen_sink"
version = "0.1.0"
description = "Native bindings for kitchen_sink"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["kitchen_sink"]

[tool.setuptools.package-data]
"kitchen_sink" = ["py.typed", "*.pyi", "*.so", "*.dylib", "*.dll"]

# END pyproject.toml
