crates/weaveffi-cli/tests/snapshots/python_kitchen_sink__weaveffi_weaveffi_pyi.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional, Type

class WeaveFFIError(Exception):
    code: int
    message: str
    def __init__(self, code: int, message: str) -> None: ...

# A reusable token referenced across modules
class Token:
    id: int
    label: str
    def __init__(self, id: int, label: str) -> None: ...

# Trivial cross-module helper
def ping() -> str: ...

class KitchenErrorsError(WeaveFFIError):
    NotFound: Type["NotFound"]
    InvalidInput: Type["InvalidInput"]
    def __init__(self, code: int, message: str) -> None: ...

class NotFound(KitchenErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

class InvalidInput(KitchenErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

# Task priority levels
class Priority(IntEnum):
    # Low priority
    Low: int
    # Normal priority
    Normal: int
    # High priority
    High: int

# Kitchen sink struct exercising every field feature
class Item:
    # Stable identifier
    id: int
    # Display name
    name: str
    # Initial count
    count: int
    # Whether the item is enabled
    enabled: bool
    # Scaling ratio
    ratio: float
    nick: int
    payload: bytes
    tags: List[str]
    attrs: Dict[str, str]
    parent: Optional[int]
    # Cross-module struct reference
    token: "Token"
    priority: "Priority"
    def __init__(self, id: int, name: str, count: int, enabled: bool, ratio: float, nick: int, payload: bytes, tags: List[str], attrs: Dict[str, str], parent: Optional[int], token: "Token", priority: "Priority") -> None: ...

# A pocket-sized interface exercising the object surface
class Gadget:
    def __init__(self, id: int) -> None: ...
    def describe(self) -> str: ...
    def poke(self, times: int) -> int: ...
    @staticmethod
    def version() -> str: ...

# Subscribe to OnReady events
def register_ready_listener(callback: Callable[[int, str], None]) -> int: ...
def unregister_ready_listener(listener_id: int) -> None: ...

# Identity for bool
def bool_id(x: bool) -> bool: ...

def i32_id(x: int) -> int: ...

def u32_id(x: int) -> int: ...

def i64_id(x: int) -> int: ...

def f64_id(x: float) -> float: ...

def echo_string(s: str) -> str: ...

def echo_bytes(b: bytes) -> bytes: ...

# Borrowed string parameter
def echo_borrowed_str(s: str) -> str: ...

# Borrowed bytes parameter
def echo_borrowed_bytes(b: bytes) -> bytes: ...

# Returns an opaque handle
def open_handle() -> int: ...

# Returns a typed handle
def open_typed_handle() -> int: ...

# Optional struct return
def maybe_item(id: int) -> Optional["Item"]: ...

# List of structs
def list_items() -> List["Item"]: ...

# Map return type
def get_attrs() -> Dict[str, int]: ...

# Iterator return type
def stream_items() -> Iterator["Item"]: ...

# Returns the shared Token type from another module
def cross_module_token() -> "Token": ...

# Async operation
async def do_async(input: str) -> str: ...

# Cancellable async operation
async def do_cancellable(input: str) -> str: ...

# Legacy operation kept for compatibility
def legacy_op() -> int: ...

# Replacement for legacy_op
def new_op() -> int: ...

# Trivial nested-module function
def hello() -> str: ...

# END weaveffi.pyi
